--- a/.travis.yml
+++ b/.travis.yml
@@ -5,5 +5,5 @@ before_install:
 install:
   - docker build -t maldet .
   - docker run -ti --name maldet maldet -u
-script:
-  - docker ps | grep -q maldet 
+#script:
+#  - docker ps | grep -q maldet 
