Fix readme link - remove script in travis file

--- a/.travis.yml
+++ b/.travis.yml
@@ -4,6 +4,4 @@ before_install:
   - docker run --rm -i lukasmartinelli/hadolint hadolint --ignore DL4000 --ignore DL3008 - < Dockerfile
 install:
   - docker build -t maldet .
-  - docker run -d --name maldet maldet -u
-#script:
-#  - docker ps | grep -q maldet 
+  - docker run -d --name maldet maldet
